# FalcoTCP

./: Cargo.toml  README.md  build.rs  documentation.md  index.html  test.sh
.github/workflows/: docs.yaml  release.yaml  test.yaml
c_tests/: test  test.c
docs/: documentation.md
native/: net.c  net.h  numbers.h  raw_client.c
src/: asyncstd_impl.rs  client.rs  enums.rs  falco_client.rs  falco_pipeline.rs  heuristics.rs  lib.rs  main.rs  networker.rs  test.rs  thread_impl.rs  tokio_impl.rs
