[package]
name = "falcotcp"
version = "0.1.4"
edition = "2024"
description = "TCP server/client with AES-256-GCM encryption."
repository = "https://github.com/FeatheredSystems/FalcoTCP"
documentation = "https://falcotcp-docs.pages.dev/"
license = "Apache-2.0"

[features]
default = []
tokio-runtime = ["tokio"]

[dependencies]
aes-gcm = "0.10.3"
cc = "1.2.41"
libc = "0.2.177"
tokio = {version="1.47.1",features=["full"], optional=true}
