[package]
name = "falcotcp"
version = "0.1.4"
edition = "2024"
description = "TCP server/client with AES-256-GCM encryption."
repository = "https://github.com/FeatheredSystems/FalcoTCP"
documentation = "https://falcotcp-docs.pages.dev/"
license = "Apache-2.0"
build="build.rs"

[build-dependencies]
cc = "1.2.41"

[features]
default = ["falco-server","heuristics","falco-client","encryption"]
heubias-performance = []
heubias-balance = []
heubias-ratio = []
heuristics = []
complete-compression = ["LZMA","GZIP","LZ4","ZSTD"]
tokio-runtime = ["tokio"]
client = []
server = []
encryption = ["aes-gcm"]
falco-client = ["client"]
falco-server = ["server"]
LZMA = ["xz2"]
GZIP = ["flate2"]
LZ4 = ["lz4_flex"]
ZSTD = ["zstd"]
dynamic-uring-link = []
dev-redundancies = []
[dependencies]
aes-gcm = {version="=0.10.3",optional=true}
tokio = {version="=1.47.1",features=["full"], optional=true}
xz2 = {version="=0.1.7", optional=true}
flate2 = {version="=1.1.4", optional=true}
lz4_flex = {version="=0.11.5",optional=true}
zstd = {version="=0.12", optional=true}
