[package]
name = "falcotcp"
version = "0.2.1"
edition = "2024"
description = "TCP server/client"
repository = "https://github.com/FeatheredSystems/FalcoTCP"
documentation = "ttd3v.github.io/FalcoTCP/"
license = "Apache-2.0"
build="build.rs"

[build-dependencies]
cc = "1.2.41"

[dev-dependencies]
log = "0.4.28"

[features]
default = ["tokio-tls","server","falco-client","client","falco-server"]
heubias-performance = []
heubias-balance = []
heubias-ratio = []
heuristics = []
complete-compression = ["LZMA","GZIP","LZ4","ZSTD"]
tokio-runtime = ["tokio"]
client = []
server = []
encryption = ["aes-gcm"]
falco-client = ["client"]
falco-server = ["server"]
LZMA = ["xz2"]
GZIP = ["flate2"]
LZ4 = ["lz4_flex"]
ZSTD = ["zstd"]
tls = ["rustls","rustls-pki-types","rustls-native-certs"]
tokio-tls=["tokio-rustls","tokio-runtime","tls"]
dynamic-uring-link = []
dev-redundancies = []
[dependencies]
aes-gcm = {version="=0.10.3",optional=true}
tokio = {version="=1.47.1",features=["full"], optional=true}
xz2 = {version="=0.1.7", optional=true}
flate2 = {version="=1.1.4", optional=true}
lz4_flex = {version="=0.11.5",optional=true}
zstd = {version="=0.12", optional=true}
rustls = {version="=0.23.35",optional=true}
rustls-native-certs = {version="0.8.2", optional=true} 
rustls-pki-types = {version="1.13.0", optional=true}
tokio-rustls = { version = "0.26.0", optional = true }
